vlib/v/checker/tests/div_op_wrong_left_type_err_c.out
vlib/v/checker/tests/div_op_wrong_left_type_err_c.vv:3:13: error: mismatched types `map[string]int` and `any_int`
    1 | fn main() {
    2 |     a := map[string]int
    3 |     println(a / 10)
      |             ^
    4 | }
